Fix whitespace above the main image

--- a/basic/mobile-first/mobile-first-main.css
+++ b/basic/mobile-first/mobile-first-main.css
@@ -7,7 +7,6 @@
     width: 100vw;
     height: 33vh;
     padding: 0.6rem;
-    margin-top: 2.6rem;
 }
 
 #product-overview h1 {
